
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/rootContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/gas_expand_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/gas_expand1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="10dp"
                android:textOn="-"
                android:textOff="+"
                android:switchMinWidth="10dp"
                />

            <TextView
                android:id="@+id/gas_device_name_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/gas_sensor_button"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gasSensorCollapsibleContainer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/graph1TitleBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/gas_sensor_1_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:text="@string/gas_sensor_1_dropdown_title"
                    />

                <Spinner
                    android:id="@id/sensor_1_frequency_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/select_frequency_dropdown" />

                <Spinner
                    android:id="@+id/sensor_1_data_select_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/gas_data_select"
                    android:prompt="@string/select_data_dropdown" />

                <TextView
                    android:id="@+id/gas_sensor_2_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:text="@string/gas_sensor_2_dropdown_title"
                    />

                <Spinner
                    android:id="@id/sensor_2_frequency_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/select_frequency_dropdown" />

                <Spinner
                    android:id="@+id/sensor_2_data_select_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/gas_data_select"
                    android:prompt="@string/select_data_dropdown" />

            </LinearLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/gas_sensor_graph_1"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:id="@+id/graph2TitleBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/gas_sensor_3_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:text="@string/gas_sensor_3_dropdown_title"
                    />

                <Spinner
                    android:id="@id/sensor_3_frequency_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/select_frequency_dropdown" />

                <Spinner
                    android:id="@+id/sensor_3_data_select_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/gas_data_select"
                    android:prompt="@string/select_data_dropdown" />

                <TextView
                    android:id="@+id/gas_sensor_4_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:text="@string/gas_sensor_2_dropdown_title"
                    />

                <Spinner
                    android:id="@id/sensor_4_frequency_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/select_frequency_dropdown" />

                <Spinner
                    android:id="@+id/sensor_4_data_select_dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/gas_data_select"
                    android:prompt="@string/select_data_dropdown" />

            </LinearLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/gas_sensor_graph_2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <!--<TextView
                android:id="@+id/gas_sensor_name_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:text="@string/gas_ppm_graph_title"
                />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/gas_sensor_graph_3"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/expand3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="10dp"
                android:textOn="-"
                android:textOff="+"
                android:switchMinWidth="10dp"
                />

            <TextView
                android:id="@+id/device_name_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="10dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="@string/temp_humidity_sensor_button" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/collapsibleContainer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">


            <TextView
                android:id="@+id/sensor_name_c1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/temperature_graph_title"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/temperature_graph"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/sensor_name_c2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/humidity_graph_title"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/humidity_graph"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/sensor_name_c3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/pressure_graph_title"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/pressure_graph"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>